<resources>
    <string name="app_name">Mutour</string>
    <string name="title_activity_new_post">Book Information</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="hitokoto_api">http://api.hitokoto.cn/?encode=text</string>
    <string name="login_api">http://www.mutour.vip/mutour/mtlog.handle.php</string>

    <string name="hint_add_picture">please click the button of "+" to add pictures! </string>
    <string name="hint_view_picture">Click the item to view and long click the item to remove! </string>
    <string name="hint_book_name">Name</string>
    <string name="hint_book_price">Price</string>
    <string name="hint_book_contact">Contact</string>
    <string name="hint_book_remarks">Remarks</string>
    <string name="hint_new_luv_letter_text">Say a secrets…</string>
    <string name="hint_new_luv_letter_sender">Sender</string>
    <string name="hint_new_luv_letter_anonymity">Anonymity</string>
    <string name="hint_permission_storage">Please give the permission of STORAGE. </string>
    <string name="hint_username">Please enter your username</string>
    <string name="hint_password">Please enter your password</string>
    <string name="hint_new_account">New Account</string>
    <string name="hint_login_success">Login Success! </string>

    <string name="menu_search">Search</string>
    <string name="menu_done">Done</string>
    <string name="menu_open_browser">Open In Browser</string>

    <string name="error_null_text">The text is null… </string>
    <string name="error_null_sender">The sender is null… </string>
    <string name="error_null_username">The username is null</string>
    <string name="error_null_password">The password is null</string>
    <string name="error_error_username">The username is invalid! </string>
    <string name="error_short_password">The password is at least 6 characters! </string>
    <string name="error_password">Password Error! </string>
    <string name="error_login_null">Please check out the text! </string>

    <string name="text_login">Sign In/Up</string>
    <string name="nav_i_mu_blog">iMu Blog</string>
    <string name="nav_school_activity">School Activity</string>
    <string name="nav_my_books">My Books</string>
    <string name="nav_borrowed_books">Borrowed Books</string>
    <string name="nav_recommend_books">Recommend Books</string>
    <string name="nav_store">Store</string>
    <string name="nav_discuss">Discuss</string>
    <string name="nav_setting">Setting</string>
    <string name="nav_luv_letter">Luv Letter</string>

    <string name="title_activity_luv_letter">LuvLetterActivity</string>
    <string name="title_activity_new_luv_letter">NewLuvLetterActivity</string>
    <string name="title_activity_sign_in">SignInActivity</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="title_activity_web">WebActivity</string>
    <string name="title_activity_my_book">MyBookActivity</string>
    <string name="title_activity_school">SchoolActivity</string>
    <string name="title_activity_discuss">DiscussActivity</string>
</resources>
