<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item/>
        <item/>
        <item/>
        <item
            android:id="@+id/borrow"
            android:icon="@drawable/ic_borrowed"
            android:title="@string/nav_borrowed_books"/>
        <item
            android:id="@+id/recommend"
            android:icon="@drawable/ic_recommend"
            android:title="@string/nav_recommend_books"/>
        <item
            android:id="@+id/store"
            android:icon="@drawable/ic_store"
            android:title="@string/nav_store"/>
        <item
            android:id="@+id/discuss"
            android:icon="@drawable/ic_discuss"
            android:title="@string/nav_discuss"/>
        <item
            android:id="@+id/setting"
            android:icon="@drawable/ic_setting"
            android:title="@string/nav_setting"/>
    </group>
</menu>
